# tetrix-in-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: devcontainer.json
src/: main.c
src/engine_game/: board.h  engine_game.c  engine_game.h  game_state.h
src/input_game/: input_game.c  input_game.h
src/render_game/: render_game.c  render_game.h
